--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Sign in & Sign up Form</title>
     </head>
   <body>
-      <div id="loader">
+      <div id="loader" class="">
         <div class="circ">
           <div class="load">Loading . . . </div>
           <div class="hands"></div>
