--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
       src="https://kit.fontawesome.com/64d58efce2.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style.css?v=1.0">
+    <script src="app.js?v=1.0"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <title>Sign in & Sign up Form</title>
     </head>
@@ -102,6 +103,7 @@
       <p>© 2024 HireMe. All rights reserved.</p>
     </footer>
 
-    <script src="app.js"></script>
+
+    <script src="app.js?v=1.0"></script>
   </body>
 </html>
