--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="app.js?v=1.0"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <title>Sign in & Sign up Form</title>
+    <script src="https://unpkg.com/scrollreveal"></script>
     </head>
   <body>
     <div id="loader" class="">
@@ -125,5 +126,6 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>    
     <script src="app.js?v=1.0"></script>
+    <script src="https://unpkg.com/scrollreveal"></script>
   </body>
 </html>
